@@ -63,10 +63,11 @@ public class UserRestController {
     @GetMapping
     public List<UserDto> getAll() {
 
-       List<User> userList =  userService.findAll();
-       List<UserDto> userDtoList = userList.stream().map(dtoMapper::convertToDto).collect(Collectors.toList());
+        return    userService.findAll()
+                  .stream()
+                  .map(dtoMapper::convertToDto).collect(Collectors.toList());
 
-        return userDtoList;
+
     }
 
     @GetMapping("/{page}/{size}")
@@ -74,9 +75,10 @@ public class UserRestController {
     public ResponseEntity<?> findAll(@PathVariable Integer page, @PathVariable Integer size) {
         Sort sort =  Sort.by(new Sort.Order(Sort.Direction.ASC,"id"));
         Pageable pageable = PageRequest.of(page,size,sort);
-     Page users = userService.findAll(pageable);
-     List<User> userList =  users.toList();
-        List<UserDto> userDtoList = userList.stream().map(dtoMapper::convertToDto).collect(Collectors.toList());
+        List<UserDto> userDtoList  = userService.findAll(pageable).toList()
+                .stream()
+                .map(dtoMapper::convertToDto)
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok(userDtoList);
     }
@@ -126,9 +128,9 @@ public class UserRestController {
     @GetMapping("/{userId}/friends")
     public ResponseEntity<?>  getFriends(@PathVariable("userId")  Long  userId) {
 
-        List<Friend> friends = defaultService.friendsOfUser(userId);
-
-        List<FriendDto> friendDtoList = friends.stream().map(friendMapper::convertToDto).collect(Collectors.toList());
+        List<FriendDto> friendDtoList = defaultService.friendsOfUser(userId)
+                .stream()
+                .map(friendMapper::convertToDto).collect(Collectors.toList());
 
         return ResponseEntity.ok().body(friendDtoList);
     }
@@ -140,8 +142,10 @@ public class UserRestController {
         if (user   == null) {
             return ResponseEntity.badRequest().body("User not found");
         }
-        List<Chat> userChats = user.getChats();
-        List<ChatDto> userChatsDto = userChats.stream().map(chatMapper::convertToDto).collect(Collectors.toList());
+        List<ChatDto> userChatsDto = user.getChats()
+                     .stream()
+                      .map(chatMapper::convertToDto)
+                      .collect(Collectors.toList());
         return ResponseEntity.ok().body(userChatsDto );
     }
 
@@ -153,8 +157,10 @@ public class UserRestController {
         if (profile.isEmpty()) {
             return ResponseEntity.badRequest().body("User not found");
         }
-        List<Chat> userChats = profile.get().getChats();
-        List<ChatDto> userChatsDto = userChats.stream().map(chatMapper::convertToDto).collect(Collectors.toList());
+        List<ChatDto> userChatsDto  = profile.get().getChats()
+                   .stream()
+                   .map(chatMapper::convertToDto)
+                   .collect(Collectors.toList());
         return ResponseEntity.ok().body(userChatsDto );
     }
 
@@ -167,8 +173,10 @@ public class UserRestController {
             return ResponseEntity.badRequest().body("User not found");
         }
 
-        List<Post> userPosts = user.getPosts();
-        List<PostDto> userPostsDto = userPosts.stream().map(postMapper::convertToDto).collect(Collectors.toList());
+        List<PostDto> userPostsDto = user.getPosts()
+                      .stream()
+                      .map(postMapper::convertToDto)
+                      .collect(Collectors.toList());
         return ResponseEntity.ok().body(userPostsDto );
     }
 
